# simfrancisco

./: .dockerignore  .gitignore  BRIEF.md  Cargo.toml  Dockerfile  INTEGRATION.md  NOTES.md  README.md  fly.toml  index.html  rubric.yaml  rubric_cybercago.yaml  rubric_neu_york.yaml  rubric_simami.yaml  rubric_synth_la.yaml  styles.css
.githooks/: pre-push
config/: pipeline.toml
config/cities/: cybercago.toml  neu_york.toml  sf.toml  simami.toml  synth_la.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: agent.rs  aggregate.rs  api.rs  city.rs  geo.rs  lib.rs  lifestyle.rs  model.rs  news.rs  parse.rs  pathfind.rs  persona.rs  predict.rs  pums.rs  religion.rs  rubric.rs  sim.rs  store.rs
crates/sim-core/tests/: contract.rs
crates/sim-maps/: CREDITS.md  Cargo.toml  INTEGRATION.md
crates/sim-maps/src/: autotile.rs  config.rs  crs.rs  db.rs  debug.rs  dem.rs  lib.rs  lod.rs  main.rs  osm.rs  pipeline.rs  raster.rs  render.rs  topo.rs  types.rs
crates/sim-maps/tests/: phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs
data/: cybercago_pums.csv  sf_pums.csv  simami_pums.csv
data/cities/: cybercago.toml  neu_york.toml  simami.toml  synth_la.toml
data/news/: cybercago.json  neu_york.json  sf.json  simami.json  synth_la.json
data/survey/: atus_routine.csv  cex_spending.csv  hobbies.csv
frontend/: README.md  index.html  styles.css
frontend/src/: api.js  app.js  config.js  map.js  projection.js
scripts/: build_city.sh
src/: api.js  api.rs  app.js  config.js  geo.rs  lib.rs  map.js  model.rs  persona.rs  predict.rs  pums.rs  religion.rs  sf-outline.js  state.rs  verdict.js
tests/: contract.rs
tools/: baseline_cybercago.sha256  baseline_db.sha256  baseline_neu_york.sha256  baseline_sf.sha256  baseline_simami.sha256  baseline_synth_la.sha256  compute_centroids.py  slim_tiles.sh  verify
